@@ -14,19 +14,23 @@ package tech.pegasys.signers.aws;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
+import static tech.pegasys.signers.aws.SecretsMaps.SECRET_NAME_PREFIX_A;
 
 import java.util.AbstractMap.SimpleEntry;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.AfterAll;
-import org.junit.jupiter.api.Assumptions;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInstance;
+import org.junit.jupiter.api.condition.EnabledIfEnvironmentVariable;
 import software.amazon.awssdk.auth.credentials.AwsBasicCredentials;
 import software.amazon.awssdk.auth.credentials.StaticCredentialsProvider;
 import software.amazon.awssdk.regions.Region;
@@ -43,47 +47,60 @@ import software.amazon.awssdk.services.secretsmanager.model.UntagResourceRequest
 import software.amazon.awssdk.services.secretsmanager.model.UpdateSecretRequest;
 
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
+@EnabledIfEnvironmentVariable(
+    named = "RW_AWS_ACCESS_KEY_ID",
+    matches = ".*",
+    disabledReason = "RW_AWS_ACCESS_KEY_ID env variable is required")
+@EnabledIfEnvironmentVariable(
+    named = "RW_AWS_SECRET_ACCESS_KEY",
+    matches = ".*",
+    disabledReason = "RW_AWS_SECRET_ACCESS_KEY env variable is required")
+@EnabledIfEnvironmentVariable(
+    named = "AWS_ACCESS_KEY_ID",
+    matches = ".*",
+    disabledReason = "AWS_ACCESS_KEY_ID env variable is required")
+@EnabledIfEnvironmentVariable(
+    named = "AWS_SECRET_ACCESS_KEY",
+    matches = ".*",
+    disabledReason = "AWS_SECRET_ACCESS_KEY env variable is required")
+@EnabledIfEnvironmentVariable(
+    named = "AWS_REGION",
+    matches = ".*",
+    disabledReason = "AWS_REGION env variable is required")
 class AwsSecretsManagerTest {
 
   private static final String RW_AWS_ACCESS_KEY_ID = System.getenv("RW_AWS_ACCESS_KEY_ID");
   private static final String RW_AWS_SECRET_ACCESS_KEY = System.getenv("RW_AWS_SECRET_ACCESS_KEY");
 
-  private static final String RO_AWS_ACCESS_KEY_ID = System.getenv("RO_AWS_ACCESS_KEY_ID");
-  private static final String RO_AWS_SECRET_ACCESS_KEY = System.getenv("RO_AWS_SECRET_ACCESS_KEY");
-  private static final String AWS_REGION = "us-east-2";
-
-  private static final String SECRET_NAME_PREFIX = "signers-aws-integration/";
-  private static final String SECRET_NAME1_KEY1_VALA = SECRET_NAME_PREFIX + "secret1";
-  private static final String SECRET_NAME2_KEY1_VALB = SECRET_NAME_PREFIX + "secret2";
-  private static final String SECRET_NAME3_KEY2_VALC = SECRET_NAME_PREFIX + "secret3";
-  private static final String SECRET_NAME4_KEY2_VALB = SECRET_NAME_PREFIX + "secret4";
-  private static final String SECRET_VALUE1 = "secret-value1";
-  private static final String SECRET_VALUE2 = "secret-value2";
-  private static final String SECRET_VALUE3 = "secret-value3";
-  private static final String SECRET_VALUE4 = "secret-value4";
+  private static final String RO_AWS_ACCESS_KEY_ID = System.getenv("AWS_ACCESS_KEY_ID");
+  private static final String RO_AWS_SECRET_ACCESS_KEY = System.getenv("AWS_SECRET_ACCESS_KEY");
+  private static final String AWS_REGION =
+      Optional.ofNullable(System.getenv("AWS_REGION")).orElse("us-east-2");
 
   private AwsSecretsManager awsSecretsManagerDefault;
   private AwsSecretsManager awsSecretsManagerExplicit;
   private AwsSecretsManager awsSecretsManagerInvalidCredentials;
   private SecretsManagerClient testSecretsManagerClient;
 
-  void verifyEnvironmentVariables() {
-    Assumptions.assumeTrue(
-        RW_AWS_ACCESS_KEY_ID != null, "Set RW_AWS_ACCESS_KEY_ID environment variable");
-    Assumptions.assumeTrue(
-        RW_AWS_SECRET_ACCESS_KEY != null, "Set RW_AWS_SECRET_ACCESS_KEY environment variable");
-    Assumptions.assumeTrue(
-        RO_AWS_ACCESS_KEY_ID != null, "Set RO_AWS_ACCESS_KEY_ID environment variable");
-    Assumptions.assumeTrue(
-        RO_AWS_SECRET_ACCESS_KEY != null, "Set RO_AWS_SECRET_ACCESS_KEY environment variable");
-  }
+  private final SecretsMaps secretsMaps = new SecretsMaps();
 
   @BeforeAll
   void setup() {
-    verifyEnvironmentVariables();
     initAwsSecretsManagers();
     initTestSecretsManagerClient();
     createTestSecrets();
+  }
+
+  private void createTestSecrets() {
+    secretsMaps
+        .getAllSecretsMap()
+        .forEach(
+            (key, awsSecret) ->
+                createOrUpdateSecret(
+                    key,
+                    awsSecret.getTagKey(),
+                    awsSecret.getTagValue(),
+                    awsSecret.getSecretValue()));
   }
 
   @AfterAll
@@ -97,128 +114,278 @@ class AwsSecretsManagerTest {
 
   @Test
   void fetchSecretWithDefaultManager() {
-    Optional<String> secret = awsSecretsManagerDefault.fetchSecret(SECRET_NAME1_KEY1_VALA);
-    assertThat(secret).hasValue(SECRET_VALUE1);
+    final Map<String, AwsSecret> secretsMap = secretsMaps.getAllSecretsMap();
+    final String key = secretsMap.keySet().stream().findAny().orElseThrow();
+    final Optional<String> secret = awsSecretsManagerDefault.fetchSecret(key);
+    assertThat(secret).hasValue(secretsMap.get(key).getSecretValue());
   }
 
   @Test
   void fetchSecretWithExplicitManager() {
-    Optional<String> secret = awsSecretsManagerExplicit.fetchSecret(SECRET_NAME1_KEY1_VALA);
-    assertThat(secret).hasValue(SECRET_VALUE1);
+    final Map<String, AwsSecret> secretsMap = secretsMaps.getAllSecretsMap();
+    final String key = secretsMap.keySet().stream().findAny().orElseThrow();
+
+    final Optional<String> secret = awsSecretsManagerExplicit.fetchSecret(key);
+    assertThat(secret).hasValue(secretsMap.get(key).getSecretValue());
   }
 
   @Test
   void fetchSecretWithInvalidCredentialsReturnsEmpty() {
+    final Map<String, AwsSecret> secretsMap = secretsMaps.getAllSecretsMap();
+    final String key = secretsMap.keySet().stream().findAny().orElseThrow();
     assertThatExceptionOfType(RuntimeException.class)
-        .isThrownBy(() -> awsSecretsManagerInvalidCredentials.fetchSecret(SECRET_NAME1_KEY1_VALA))
+        .isThrownBy(() -> awsSecretsManagerInvalidCredentials.fetchSecret(key))
         .withMessageContaining("Failed to fetch secret from AWS Secrets Manager.");
   }
 
   @Test
   void fetchingNonExistentSecretReturnsEmpty() {
-    Optional<String> secret = awsSecretsManagerDefault.fetchSecret("signers-aws-integration/empty");
+    Optional<String> secret = awsSecretsManagerDefault.fetchSecret(SECRET_NAME_PREFIX_A + "empty");
     assertThat(secret).isEmpty();
   }
 
   @Test
-  void emptyTagFiltersReturnAllSecrets() {
+  void emptyFiltersReturnAllSecrets() {
     final Collection<SimpleEntry<String, String>> secretEntries =
         awsSecretsManagerExplicit.mapSecrets(
-            Collections.emptyList(), Collections.emptyList(), SimpleEntry::new);
+            Collections.emptyList(),
+            Collections.emptyList(),
+            Collections.emptyList(),
+            SimpleEntry::new);
 
-    assertThat(secretEntries.stream().map(SimpleEntry::getKey))
-        .contains(
-            SECRET_NAME1_KEY1_VALA,
-            SECRET_NAME2_KEY1_VALB,
-            SECRET_NAME3_KEY2_VALC,
-            SECRET_NAME4_KEY2_VALB);
+    final Set<String> fetchedKeys =
+        secretEntries.stream().map(SimpleEntry::getKey).collect(Collectors.toSet());
+
+    assertThat(fetchedKeys).containsAll(secretsMaps.getAllSecretsMap().keySet());
   }
 
   @Test
   void nonExistentTagFiltersReturnsEmpty() {
     final Collection<SimpleEntry<String, String>> secretEntries =
         awsSecretsManagerExplicit.mapSecrets(
-            List.of("nonexistent-tag-key"), List.of("nonexistent-tag-value"), SimpleEntry::new);
+            Collections.emptyList(),
+            List.of("nonexistent-tag-key"),
+            List.of("nonexistent-tag-value"),
+            SimpleEntry::new);
 
     assertThat(secretEntries).isEmpty();
   }
 
   @Test
-  void listAndMapSecretsWithMatchingTagKeys() {
+  void nonExistentPrefixFilterReturnsEmpty() {
     final Collection<SimpleEntry<String, String>> secretEntries =
         awsSecretsManagerExplicit.mapSecrets(
-            List.of("tagKey1"), Collections.emptyList(), SimpleEntry::new);
+            List.of("nonexistent-secret-prefix"),
+            Collections.emptyList(),
+            Collections.emptyList(),
+            SimpleEntry::new);
 
-    assertThat(secretEntries.stream().map(SimpleEntry::getKey))
-        .contains(SECRET_NAME1_KEY1_VALA, SECRET_NAME2_KEY1_VALB)
-        .doesNotContain(SECRET_NAME3_KEY2_VALC, SECRET_NAME4_KEY2_VALB);
-    assertThat(secretEntries.stream().map(SimpleEntry::getValue))
-        .contains(SECRET_VALUE1, SECRET_VALUE2)
-        .doesNotContain(SECRET_VALUE3, SECRET_VALUE4);
+    assertThat(secretEntries).isEmpty();
+  }
+
+  @Test
+  void nonExistentPrefixFilterWithTagFilterReturnsEmpty() {
+    final Collection<SimpleEntry<String, String>> secretEntries =
+        awsSecretsManagerExplicit.mapSecrets(
+            List.of("nonexistent-secret-prefix"),
+            List.of("tagKey1"),
+            Collections.emptyList(),
+            SimpleEntry::new);
+
+    assertThat(secretEntries).isEmpty();
+  }
+
+  @Test
+  void listAndMapSecretsWithPrefix() {
+    final Collection<SimpleEntry<String, String>> secretEntries =
+        awsSecretsManagerExplicit.mapSecrets(
+            List.of(SECRET_NAME_PREFIX_A),
+            Collections.emptyList(),
+            Collections.emptyList(),
+            SimpleEntry::new);
+
+    final Set<String> fetchedKeys =
+        secretEntries.stream().map(SimpleEntry::getKey).collect(Collectors.toSet());
+
+    assertThat(fetchedKeys).containsAll(secretsMaps.getPrefixASecretsMap().keySet());
+    assertThat(fetchedKeys)
+        .doesNotContainAnyElementsOf(secretsMaps.getPrefixBSecretsMap().keySet());
+  }
+
+  @Test
+  void listAndMapSecretsWithPrefixAndTags() {
+    final Collection<SimpleEntry<String, String>> secretEntries =
+        awsSecretsManagerExplicit.mapSecrets(
+            List.of(SECRET_NAME_PREFIX_A),
+            List.of("tagKey1"),
+            Collections.emptyList(),
+            SimpleEntry::new);
+
+    final Set<String> fetchedKeys =
+        secretEntries.stream().map(SimpleEntry::getKey).collect(Collectors.toSet());
+
+    final Map<Boolean, List<Map.Entry<String, AwsSecret>>> expectedSecrets =
+        secretsMaps.getPrefixASecretsMap().entrySet().stream()
+            .collect(
+                Collectors.partitioningBy(
+                    entry -> Objects.equals("tagKey1", entry.getValue().getTagKey())));
+
+    assertThat(fetchedKeys)
+        .containsAll(
+            expectedSecrets.get(Boolean.TRUE).stream()
+                .map(Map.Entry::getKey)
+                .collect(Collectors.toSet()));
+    assertThat(fetchedKeys)
+        .doesNotContainAnyElementsOf(
+            expectedSecrets.get(Boolean.FALSE).stream()
+                .map(Map.Entry::getKey)
+                .collect(Collectors.toSet()));
+    assertThat(fetchedKeys)
+        .doesNotContainAnyElementsOf(secretsMaps.getPrefixBSecretsMap().keySet());
+  }
+
+  @Test
+  void listAndMapSecretsWithMatchingTagKeys() {
+    final Set<String> expectedTagKeys = Set.of("tagKey1");
+    final Collection<SimpleEntry<String, String>> secretEntries =
+        awsSecretsManagerExplicit.mapSecrets(
+            Collections.emptyList(), expectedTagKeys, Collections.emptyList(), SimpleEntry::new);
+
+    final Set<String> fetchedKeys =
+        secretEntries.stream().map(SimpleEntry::getKey).collect(Collectors.toSet());
+
+    final Map<Boolean, List<Map.Entry<String, AwsSecret>>> expectedSecrets =
+        secretsMaps.getAllSecretsMap().entrySet().stream()
+            .collect(
+                Collectors.partitioningBy(
+                    entry -> expectedTagKeys.contains(entry.getValue().getTagKey())));
+
+    assertThat(fetchedKeys)
+        .containsAll(
+            expectedSecrets.get(Boolean.TRUE).stream()
+                .map(Map.Entry::getKey)
+                .collect(Collectors.toSet()));
+    assertThat(fetchedKeys)
+        .doesNotContainAnyElementsOf(
+            expectedSecrets.get(Boolean.FALSE).stream()
+                .map(Map.Entry::getKey)
+                .collect(Collectors.toSet()));
   }
 
   @Test
   void listAndMapSecretsWithMatchingTagValues() {
+    final Set<String> expectedTagValues = Set.of("tagValB", "tagValC");
+
     final Collection<SimpleEntry<String, String>> secretEntries =
         awsSecretsManagerExplicit.mapSecrets(
-            Collections.emptyList(), List.of("tagValB", "tagValC"), SimpleEntry::new);
+            Collections.emptyList(), Collections.emptyList(), expectedTagValues, SimpleEntry::new);
+    final Set<String> fetchedKeys =
+        secretEntries.stream().map(SimpleEntry::getKey).collect(Collectors.toSet());
 
-    assertThat(secretEntries.stream().map(SimpleEntry::getKey))
-        .contains(SECRET_NAME2_KEY1_VALB, SECRET_NAME3_KEY2_VALC, SECRET_NAME4_KEY2_VALB)
-        .doesNotContain(SECRET_NAME1_KEY1_VALA);
-    assertThat(secretEntries.stream().map(SimpleEntry::getValue))
-        .contains(SECRET_VALUE2, SECRET_VALUE3, SECRET_VALUE4)
-        .doesNotContain(SECRET_VALUE1);
+    // expected tag values from both maps should have returned
+    final Map<Boolean, List<Map.Entry<String, AwsSecret>>> expectedSecrets =
+        secretsMaps.getAllSecretsMap().entrySet().stream()
+            .collect(
+                Collectors.partitioningBy(
+                    entry -> expectedTagValues.contains(entry.getValue().getTagValue())));
+
+    assertThat(fetchedKeys)
+        .containsAll(
+            expectedSecrets.get(Boolean.TRUE).stream()
+                .map(Map.Entry::getKey)
+                .collect(Collectors.toSet()));
+    assertThat(fetchedKeys)
+        .doesNotContainAnyElementsOf(
+            expectedSecrets.get(Boolean.FALSE).stream()
+                .map(Map.Entry::getKey)
+                .collect(Collectors.toSet()));
   }
 
   @Test
   void listAndMapSecretsWithMatchingTagKeysAndValues() {
+    final Set<String> expectedTagKeys = Set.of("tagKey1");
+    final Set<String> expectedTagValues = Set.of("tagValB");
+
     final Collection<SimpleEntry<String, String>> secretEntries =
         awsSecretsManagerExplicit.mapSecrets(
-            List.of("tagKey1"), List.of("tagValB"), SimpleEntry::new);
+            Collections.emptyList(), expectedTagKeys, expectedTagValues, SimpleEntry::new);
+    final Set<String> fetchedKeys =
+        secretEntries.stream().map(SimpleEntry::getKey).collect(Collectors.toSet());
 
-    assertThat(secretEntries.stream().map(SimpleEntry::getKey))
-        .contains(SECRET_NAME2_KEY1_VALB)
-        .doesNotContain(SECRET_NAME1_KEY1_VALA, SECRET_NAME3_KEY2_VALC, SECRET_NAME4_KEY2_VALB);
-    assertThat(secretEntries.stream().map(SimpleEntry::getValue))
-        .contains(SECRET_VALUE2)
-        .doesNotContain(SECRET_VALUE1, SECRET_VALUE3, SECRET_VALUE4);
+    final Map<Boolean, List<Map.Entry<String, AwsSecret>>> expectedSecrets =
+        secretsMaps.getAllSecretsMap().entrySet().stream()
+            .collect(
+                Collectors.partitioningBy(
+                    entry ->
+                        expectedTagKeys.contains(entry.getValue().getTagKey())
+                            && expectedTagValues.contains(entry.getValue().getTagValue())));
+
+    assertThat(fetchedKeys)
+        .containsAll(
+            expectedSecrets.get(Boolean.TRUE).stream()
+                .map(Map.Entry::getKey)
+                .collect(Collectors.toSet()));
+    assertThat(fetchedKeys)
+        .doesNotContainAnyElementsOf(
+            expectedSecrets.get(Boolean.FALSE).stream()
+                .map(Map.Entry::getKey)
+                .collect(Collectors.toSet()));
   }
 
   @Test
   void throwsAwayObjectsWhichMapToNull() {
+    final Map<String, AwsSecret> secretsMap = secretsMaps.getAllSecretsMap();
+    final String expectedKey = secretsMap.keySet().stream().findAny().orElseThrow();
+
     final Collection<SimpleEntry<String, String>> secretEntries =
         awsSecretsManagerExplicit.mapSecrets(
             Collections.emptyList(),
             Collections.emptyList(),
+            Collections.emptyList(),
             (name, value) -> {
-              if (name.equals(SECRET_NAME1_KEY1_VALA)) {
+              if (name.equals(expectedKey)) {
                 return null;
               }
               return new SimpleEntry<>(name, value);
             });
+    final Set<String> fetchedKeys =
+        secretEntries.stream().map(SimpleEntry::getKey).collect(Collectors.toSet());
 
-    assertThat(secretEntries.stream().map(SimpleEntry::getKey))
-        .contains(SECRET_NAME2_KEY1_VALB, SECRET_NAME3_KEY2_VALC, SECRET_NAME4_KEY2_VALB)
-        .doesNotContain(SECRET_NAME1_KEY1_VALA);
+    final Set<String> expectedKeys =
+        secretsMap.keySet().stream()
+            .filter(secretValue -> !Objects.equals(expectedKey, secretValue))
+            .collect(Collectors.toSet());
+
+    assertThat(fetchedKeys).containsAll(expectedKeys);
+    assertThat(fetchedKeys).doesNotContain(expectedKey);
   }
 
   @Test
   void throwsAwayObjectsThatFailMapper() {
+    final Map<String, AwsSecret> secretsMap = secretsMaps.getAllSecretsMap();
+    final String expectedKey = secretsMap.keySet().stream().findAny().orElseThrow();
     final Collection<SimpleEntry<String, String>> secretEntries =
         awsSecretsManagerExplicit.mapSecrets(
             Collections.emptyList(),
             Collections.emptyList(),
+            Collections.emptyList(),
             (name, value) -> {
-              if (name.equals(SECRET_NAME1_KEY1_VALA)) {
+              if (name.equals(expectedKey)) {
                 throw new RuntimeException("Arbitrary Failure");
               }
               return new SimpleEntry<>(name, value);
             });
 
-    assertThat(secretEntries.stream().map(SimpleEntry::getKey))
-        .contains(SECRET_NAME2_KEY1_VALB, SECRET_NAME3_KEY2_VALC, SECRET_NAME4_KEY2_VALB)
-        .doesNotContain(SECRET_NAME1_KEY1_VALA);
+    final Set<String> fetchedKeys =
+        secretEntries.stream().map(SimpleEntry::getKey).collect(Collectors.toSet());
+
+    final Set<String> expectedKeys =
+        secretsMap.keySet().stream()
+            .filter(secretValue -> !Objects.equals(expectedKey, secretValue))
+            .collect(Collectors.toSet());
+
+    assertThat(fetchedKeys).containsAll(expectedKeys);
+    assertThat(fetchedKeys).doesNotContain(expectedKey);
   }
 
   private void initAwsSecretsManagers() {
@@ -255,13 +422,6 @@ class AwsSecretsManagerTest {
     awsSecretsManagerDefault.close();
     awsSecretsManagerExplicit.close();
     awsSecretsManagerInvalidCredentials.close();
-  }
-
-  private void createTestSecrets() {
-    createOrUpdateSecret(SECRET_NAME1_KEY1_VALA, "tagKey1", "tagValA", SECRET_VALUE1);
-    createOrUpdateSecret(SECRET_NAME2_KEY1_VALB, "tagKey1", "tagValB", SECRET_VALUE2);
-    createOrUpdateSecret(SECRET_NAME3_KEY2_VALC, "tagKey2", "tagValC", SECRET_VALUE3);
-    createOrUpdateSecret(SECRET_NAME4_KEY2_VALB, "tagKey2", "tagValB", SECRET_VALUE4);
   }
 
   private void createOrUpdateSecret(
